15/04/2021
CustArch_InOut_comparison --> comparison of the in/out dataflow of the Simulink custom architecture

Intan_Out_comparison --> comparison of the output of the Intan system between the original and the custom path and check of the custom path

read_Intan_RHS2000_file --> slight modified original Intan code for .rhs file reading

fsm_dataflow --> script for the simulation of the dataflow from the FSM to the host PC with synthetic data


11/05/2021
fsm_dataflow_invivo --> script for the simulation of the dataflow from the FSM to the host PC with invivo data

