@@ -7,12 +7,11 @@ clc
 data_stream_enable = [1 1 1 1 1 1 1 1]; %data stream enable rollmap
 n_chip = sum(data_stream_enable); % number of data stream enabled in the simulated data
 n_dataframe = 300;
-cust_version = 10;   %version of custom architecture
+cust_version = 12;   %version of custom architecture
 
 chip = num2str(data_stream_enable);
 frame = num2str(n_dataframe);
 
-power_spect_ch = 1; %performig the PSD of this channel
 fs = 25000; %sampling frequency (Hz)
 
 
@@ -80,51 +79,45 @@ AC_filtered = reshape(AC_filtered(1:n_element),16*n_chip,[]);
 
 time = (0:length(AC_raw(1,:))-1);
 
-%raw vs filtered data
+%% SD check
 for i = 1:n_chip*16
     
     figure
 %     subplot(2,1,1)
-    plot(time,AC_raw(i,:),'r','LineWidth',1),hold on
+    plot(time,AC_raw(i,:),'b','LineWidth',1),hold on
 %     title('Raw data')
 %     ylabel('Amplitude')
 %     axis([0 length(time) 32000 33200])
 %     set(gca,'FontSize',14)
 %     subplot(2,1,2)
-    plot(time,AC_filtered(i,:),'b','LineWidth',1)
-    title('Raw data vs Filtered')
+    plot(time(find(AC_filtered(i,:))),AC_raw(i,find(AC_filtered(i,:))),'ro')
+    title('Filtered data vs Spikes')
     xlabel('Time (Samples)')
     ylabel('Amplitude')
 %     axis([0 length(time) 32000 33200])
     set(gca,'FontSize',14)
-    legend('Raw','Filtered')
+    legend('Filtered','Spikes')
     
 end
 
-w = hamming(128);
-noverlap = length(w)/2;
-NFFT = 1024;
 
-AC_raw_double = (double(AC_raw) - 32768)*0.195;
-AC_filtered_double = (double(AC_filtered) - 32768)*0.195;
-
-
-%PSD
-%pwelch needs single or double data
-[pxx,f] = pwelch(AC_raw_double(power_spect_ch,:)-mean(AC_raw_double(power_spect_ch,:)),w,noverlap,NFFT,fs);
-[pxx_f,f_f] = pwelch(AC_filtered_double(power_spect_ch,:)-mean(AC_filtered_double(power_spect_ch,:)),w,noverlap,NFFT,fs);
-
+%% Interspike interval
+for i = 1:size(AC_filtered,1)
+    
+    ISI{i,:} = diff(find(AC_filtered(i,:)));
+    min_ISI(i) = min(ISI{i,:});
+    max_ISI(i) = max(ISI{i,:});
+    
+end
 
 figure
-plot(f,pxx,'r'),hold on
-plot(f_f,pxx_f,'b')
+stem(min_ISI,'b'),hold on
+stem(max_ISI,'r')
+title('min vs max ISI')
+ylabel('Samples')
+xlabel('Channel number')
+legend
 hold off
-title('PSD')
-legend('Raw','Filtered')
-% axis([0 127 0 1]);
-
-
-
 
 
 
